* Add "Ruins of Vashj'ir" and "Beth'mora Ridge" to list of locations in which to attempt to use the sea pony
* Fix issue where the character specific whitelist is not correctly initialised